<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs410_hci.holgater.cs410finalproject.AddProduct" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:onClick="createProduct" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fill_in_form_to_add_new_product"
                    android:id="@+id/textView2"
                    android:layout_marginTop="40dp" />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/add_a_picture_of_product"
                    android:id="@+id/textView3"
                    android:layout_alignBottom="@+id/radioGroup"
                    android:layout_toStartOf="@+id/button" />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioGroup"
                    android:layout_column="0">
                <RadioButton
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:id="@+id/Gallery" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:id="@+id/Camera"
                    android:layout_marginLeft="10dp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    android:id="@+id/Cloud"
                    android:layout_marginLeft="10dp" />
                </RadioGroup>
                <ImageView android:id="@+id/ImageView"
                    android:layout_column="1" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/description"
                    android:id="@+id/textViewDesc"
                    android:layout_marginTop="40dp" />
            </TableRow>
            <TableRow>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:width="@dimen/activity_horizontal_margin"
                    android:height="200dp"
                    android:id="@+id/editText" />
            </TableRow>
        </TableLayout>
</RelativeLayout>
